TAG: qcreports_db-6-0-11-32
DATE: 02/26/2018
STAFF: sc
CHANGES: TR12779 - Recombinase reporter check
1) Added monthly/RECOMB_ReporterCheck.py and updated index file

TAG: qcreports_db-6-0-11-31
DATE: 02/26/2018
STAFF: sc
CHANGES:
1) TR12778 - ensuring correct gene for Cre portal assays
New RECOMB_Reporter.sql monthly report, qcr.shtml updated

TAG: qcreports_db-6-0-11-30
DATE: 02/26/2018
STAFF: lec
CHANGES:
1) qcr.shtml/#6 Master Bib QTL Indexing Report renamed to Literature Triage QTL Report

TAG: qcreports_db-6-0-11-29
DATE: 02/14/2018
STAFF: lec
CHANGES:
1) TR12773/MRK_MultCoordinate.sql

TAG: qcreports_db-6-0-11-28
DATE: 02/14/2018
STAFF: lec
CHANGES:
1) TR12777/new WF_SupplementalData.py

TAG: qcreports_db-6-0-11-27
DATE: 01/19/2018
STAFF: dbm
CHANGES:
1) RECOMB_SameStructure.py: convert stage to string type before using ljust()

TAG: qcreports_db-6-0-11-26
TAG: qcreports_db-6-0-11-25
TAG: qcreports_db-6-0-11-24
DATE: 01/03/2018
STAFF: sc
CHANGES: TR12672 - new QC report mgd/WF_GO_FullCodeNoAnnot.py
Added to qcr.shtml

TAG: qcreports_db-6-0-11-23
DATE: 12/20/2017
STAFF: lec
TR12717/weekly/WF_GXD_secondary.py

TAG: qcreports_db-6-0-11-22
TAG: qcreports_db-6-0-11-21
TAG: qcreports_db-6-0-11-20
DATE: 12/xxi1805/2017
STAFF: sc
updated htmpload index file impc_index.shtml --> index.shtml

TAG: qcreports_db-6-0-11-19
DATE: 12/05/2017
STAFF: lec
TR12682/weekly/BIB_StatusMismatch_GXD.sql

TAG: qcreports_db-6-0-11-18
DATE: 12/05/2017
STAFF: sc,lec
TR12684 remove date column from GXD_Triage report
TR12730/QTL_Triage.py changes

TAG: qcreports_db-6-0-11-17
DATE: 11/30/2017
STAFF: lec
1) TR12678/MRK_GOIEA.py ; MRK_NoGO.py
2) TR12681 qcr.shtml - add link in references section to pdfdownload missed 
    papers log

TAG: qcreports_db-6-0-11-16
TAG: qcreports_db-6-0-11-15
DATE: 11/08/2017
STAFF: lec
TR12693/mgd/MRK_GOIEA.py, MRK_NoGO.py: link jfileurl -> pdfurl

TAG: qcreports_db-6-0-11-14
DATE: 11/07/2017
STAFF: sc
CHANGES: TR12607 exclude cre transgene refs from GO QC 14
